fetching jobs and groups when homepage is rendered

--- a/Project/src/styles/global.css
+++ b/Project/src/styles/global.css
@@ -30,7 +30,7 @@ a:hover{
   cursor: pointer;
 }
 
-.errorNotificationText {
+.errorMessage {
   color: var(--error-color)
 }
 .successNotificationText {
