edited CSS for footer

--- a/Project/src/styles/easynavstyles.css
+++ b/Project/src/styles/easynavstyles.css
@@ -2,7 +2,7 @@
     border: 2px solid black;
     width: 180px;
     height: 280px;
-    position: absolute;
+    position:static;
     top: 250px;
     left: 0px;
     align-items: center;
