--- a/Project/src/styles/footer.css
+++ b/Project/src/styles/footer.css
@@ -1,5 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 .footer{
-    border: 1px solid black;
-    color:darkkhaki;
-    
+    background-color: gold;
+    width: 100vw;
+    font-family: 'Poppins', sans-serif;
+    font-size: 15px;
+    padding: 30px 40px;
+    text-align: left;
+    position: relative;
+    display: flex;
+    gap: 20px;
 }
