--- a/Project/src/styles/header.css
+++ b/Project/src/styles/header.css
@@ -1,10 +1,51 @@
-.header{
-    width: auto;
-    font-family: 'Poppins', sans-serif;
-    font-size: 10px;
-    padding: 70px 100px;
-    text-align: left;
-    position:relative;
+
+.header {
     display: flex;
-    gap: 20px;
+    justify-content: space-between; 
+    align-items: baseline; 
+    padding: 20px 20px 20px 20px;
+    border-bottom: 6px solid black; 
+}
+.imgSizeHP{
+    width: 100px; 
+    height: auto;
+    vertical-align: middle; 
+    display: inline-block;
+}
+
+.links{
+    vertical-align: middle; 
+    display: inline-block;
+}
+
+.profile{
+    width: 80px; 
+    height: auto;
+}
+
+.left-container{
+    display: flex;
+    align-items: baseline; 
+    gap: 10px;
+}
+.dashboard-label{
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-left: 20px;
+}
+
+@media (max-width: 768px) {
+    .imgSizeHP {
+        width: 70px; 
+    }
+    .welcomeText {
+        font-size: 1rem; 
+    }
+    .profile {
+        width: 60px;
+        height: 60px;
+    }
+    .dashboard-label{
+        font-size: 1rem; 
+    }
 }
