--- a/Project/src/styles/button.css
+++ b/Project/src/styles/button.css
@@ -1,5 +1,5 @@
 .button{
-    background-color: gold;
+    background-color: #ffd679;
     border-radius: 30px;
     padding: 10px 30px;
     font-size: 16px;
