--- a/Project/src/styles/easynavstyles.css
+++ b/Project/src/styles/easynavstyles.css
@@ -17,14 +17,20 @@
 .listItem{
     margin: 10px;
     padding: 10px;
-    background-color: gold;
+    background-color: transparent; 
+    border: 2px solid #ffd679;    
     border-radius: 30px;
     padding: 10px 30px;
     margin-left: 40px;
     margin-bottom: 20px;
+    
 }
 .link{
-    font-size: 2em;
+    font-size: 20px;
+    color:black;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 500;
+    text-decoration: none
 }
 
 @media (max-width: 768px) {
@@ -43,15 +49,17 @@
 
     }
     .listItem{
-        margin: 10px;
-        padding: 10px;
-        background-color: gold;
+        margin: 5px;
+        padding: 5px;
+        background-color: transparent; 
+        border: 2px solid #ffd679;  
         border-radius: 30px;
-        padding: 10px 30px;
-        margin-left: 23px;
+        padding: 10px 13px;
+        margin-left: 8px;
         margin-bottom: 20px;
     }
     .link{
         font-size: 1rem;
+        text-decoration: none
     }
 }
