--- a/Project/src/styles/footer.css
+++ b/Project/src/styles/footer.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 .footer{
-    background-color: gold;
+    background-color: #ffd679;
     width: 100vw;
     font-family: 'Poppins', sans-serif;
     font-size: 15px;
@@ -10,4 +10,21 @@
     position: relative;
     display: flex;
     gap: 20px;
+}
+
+@media (max-width: 768px){
+    .footer{
+        background-color: #ffd679;
+        width: 100vw;
+        font-family: 'Poppins', sans-serif;
+        font-size: 15px;
+        padding: 30px 40px;
+        text-align: left;
+        position: fixed;  /* Fix the footer to the bottom */
+        bottom: 0;        /* Ensure it's at the bottom of the viewport */
+        left: 0;          /* Aligns the footer to the left edge */
+        display: flex;
+        gap: 20px;
+        background-color: #ffd679; 
+    }
 }
