--- a/Project/src/styles/login.css
+++ b/Project/src/styles/login.css
@@ -27,7 +27,7 @@
     margin-bottom: 5px; 
     font-family: 'Poppins', sans-serif;
     box-shadow: 0 0 0 1px black;
-    border-color: gold;
+    border-color: #ffd679;
     border-radius: 3px;
     border-width: 1px;
     padding-bottom: 20px;
