--- a/Project/src/styles/signin.css
+++ b/Project/src/styles/signin.css
@@ -32,7 +32,7 @@
     margin-bottom: 15px; 
     font-family: 'Poppins', sans-serif;
     box-shadow: 0 0 0 1px black;
-    border-color: gold;
+    border-color: #ffd679;
     border-radius: 3px;
     border-width: 1px;
     padding-bottom: 20px;
@@ -47,7 +47,7 @@
     margin-bottom: 15px; 
     font-family: 'Poppins', sans-serif;
     box-shadow: 0 0 0 1px black;
-    border-color: gold;
+    border-color: #ffd679;
     border-radius: 3px;
     border-width: 1px;
     padding-bottom: 20px;
@@ -61,7 +61,7 @@
     margin-bottom: 15px; 
     font-family: 'Poppins', sans-serif;
     box-shadow: 0 0 0 1px black;
-    border-color: gold;
+    border-color: #ffd679;
     border-radius: 3px;
     border-width: 1px;
     padding-bottom: 20px;
@@ -76,7 +76,7 @@
     margin-bottom: 15px; 
     font-family: 'Poppins', sans-serif;
     box-shadow: 0 0 0 1px black;
-    border-color: gold;
+    border-color: #ffd679;
     border-radius: 3px;
     border-width: 1px;
     padding-bottom: 20px;
@@ -90,7 +90,7 @@
     margin-bottom: 15px; 
     font-family: 'Poppins', sans-serif;
     box-shadow: 0 0 0 1px black;
-    border-color: gold;
+    border-color: #ffd679;
     border-radius: 3px;
     border-width: 1px;
     padding-bottom: 20px;
