--- a/Project/src/styles/footer.css
+++ b/Project/src/styles/footer.css
@@ -1,15 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-.footer{
+.footer {
     background-color: #ffd679;
-    width: 100vw;
+    width: 100%;
     font-family: 'Poppins', sans-serif;
     font-size: 15px;
     padding: 30px 40px;
     text-align: left;
-    position: relative;
     display: flex;
     gap: 20px;
+    margin-top: auto; 
 }
 
 @media (max-width: 768px){
@@ -20,9 +20,9 @@
         font-size: 15px;
         padding: 30px 40px;
         text-align: left;
-        position: fixed;  /* Fix the footer to the bottom */
-        bottom: 0;        /* Ensure it's at the bottom of the viewport */
-        left: 0;          /* Aligns the footer to the left edge */
+        position: fixed;  
+        bottom: 0;        
+        left: 0;          
         display: flex;
         gap: 20px;
         background-color: #ffd679; 
