refactored EasyNav and dashboard components

--- a/Project/src/styles/easynavstyles.css
+++ b/Project/src/styles/easynavstyles.css
@@ -25,6 +25,10 @@
     margin-bottom: 20px;
     
 }
+.listItem:hover{
+    cursor: pointer;
+    background-color: #ffd679;
+}
 .link{
     font-size: 20px;
     color:black;
