--- a/Project/src/styles/job-form.css
+++ b/Project/src/styles/job-form.css
@@ -32,12 +32,16 @@
     padding: 10px 20px;
     font-size: 16px;
     font-weight: 600;
-    border: none;
+    border: 1px solid #ffd679;
     font-family: 'Poppins', sans-serif;
     text-align: center;
     margin: 20px;
     cursor: pointer;
     display: block;
+}
+.backButton:hover {
+    background-color: white;
+    transition: .3s;
 }
 
 .company-name {
