--- a/Project/src/styles/jobsdashboard.css
+++ b/Project/src/styles/jobsdashboard.css
@@ -122,6 +122,9 @@
     list-style: none;
     justify-content: space-between; 
 }
+.jobListing:hover{
+  cursor: pointer;
+}
 .select-group-CTA{
     font-weight: 300;
     margin-left: 50px;
