--- a/Project/src/styles/header.css
+++ b/Project/src/styles/header.css
@@ -1,44 +1,51 @@
-
 .header {
     display: flex;
     justify-content: space-between; 
-    align-items: baseline; 
+    align-items: center; 
     padding: 20px 20px 10px 20px;
 }
 .imgSizeHP{
     width: 80px; 
     height: auto;
-    vertical-align: middle; 
-    display: inline-block;
-}
-
-.links{
-    vertical-align: middle; 
-    display: inline-block;
+    display: block;
 }
 
 .profile{
     width: 60px; 
     height: auto;
+    display: block;
 }
-
+.right-container{
+    display: flex;
+    align-items: center;
+    align-self: center; 
+    margin-top: auto;
+    margin-bottom: auto;
+}
 .left-container{
     display: flex;
-    align-items: baseline; 
+    align-items: center; 
     gap: 10px;
 }
 .dashboard-label{
     margin-top: 20px;
     margin-bottom: 20px;
-    margin-left: 50px;
 }
 .custom-divider {
     width: 95%;
     margin: 15px auto; 
     border-bottom: 1px solid black; 
 }
+.welcomeText{
+    margin-top: 30px;
+    margin-left: 10px;
+}
 
 @media (max-width: 768px) {
+    .welcomeText{
+        margin-left: 5px;
+        margin-top: 50px;
+    }
     .imgSizeHP {
         width: 70px; 
     }
@@ -51,7 +58,7 @@
     }
     .dashboard-label{
         font-size: 1rem;
-        margin-left: 35px;
+        margin-left: 30px !important;
     }
     .custom-divider {
         width: 95%;
