--- a/Project/src/styles/jobsdashboard.css
+++ b/Project/src/styles/jobsdashboard.css
@@ -27,9 +27,11 @@
     border-style: none;
 }
 
-.jobListContainer{
-    width: 90%;
+.jobListContainer-component{
+    width: 80%;
     margin-bottom: 50px;
+    margin-right: 20px;
+    margin-left: 40px;
 }
 .your-jobs-container{
     display: flex;
@@ -37,15 +39,14 @@
     flex-wrap: wrap;
     gap: 10px;
 }
-.jobList{
+.jobList-component{
     max-height: 300px; 
     overflow-y:scroll;
     padding: 8px;
-    border-radius: 8px;
+    border-radius: 15px;
     width: 100%;
     background-color: #f4f4f4;
     margin-bottom: 20px;
-    margin-left: 55px;
 }
 .your-jobs{
     font-size: 20px;
@@ -56,11 +57,11 @@
     margin-right: 10px;
     margin-left: 55px;
 }
-.job-list-title{
-    margin-top: 15px;
+.job-list-title-component{
+    margin-top: 5px;
     margin-bottom: 15px;
     font-size: 30px;
-    margin-left: 55px;
+    margin-left: 15px;
 }
 .jobListing{
     margin: 10px;
@@ -132,9 +133,38 @@
   color: #9e9e9e;
   cursor: not-allowed;
 }
-
+.groupBar {
+    display: flex;
+    gap: 12px;
+    list-style: none;
+    margin: 10px auto 0 40px;
+    padding: 8px 16px;
+    border-radius: 8px;
+    align-items: flex-start;
+    box-sizing: border-box;
+    overflow-x: auto;
+    flex-wrap: nowrap;
+    max-width: 100%;
+    scroll-snap-type: x mandatory;
+  }
+  .groupBar::-webkit-scrollbar {
+    height: 6px;
+  }
+  .groupBar::-webkit-scrollbar-thumb {
+    background: #ccc;
+    border-radius: 10px;
+  }
+  
+  .groups {
+    flex: 0 0 auto;
+    scroll-snap-align: start;
+  }
 
 @media (max-width: 768px) {
+    .groupBar {
+        max-width: 100%;
+        overflow-y: auto;
+      }
     .jobDashboardContainer {
         display: flex;
         flex-direction: column;
@@ -157,11 +187,11 @@
         margin-left: 5px;
     }
 
-    .job-list-title{
+    .job-list-title-component{
         margin-top: 15px;
         margin-bottom: 15px;
         font-size: 30px;
-        margin-left: 30px;
+        font-size: 25px;
     }
     .createButton:hover {
         cursor: pointer;
@@ -179,19 +209,21 @@
         gap: 16px;
     }
 
-    .jobListContainer {
+    .jobListContainer-component {
         width: 90%;
-        margin-bottom: 100px;
+        margin-left: 15px;
+        margin-right: 30px;
     }
 
-    .jobList {
+    .jobList-component {
         max-height: 300px; 
         overflow-y:scroll;
         padding: 8px;
-        border-radius: 8px;
+        border-radius: 15px;
         width: 100%;
         background-color: #f4f4f4;
-        margin: 0 30px 25px 20px; 
+        margin-left: 0px !important;
+        margin-right: 5px !important;
     }
     .jobListing{
         margin: 10px;
@@ -216,13 +248,17 @@
     .your-jobs-container{
         display: flex;
         align-items: center;
-        margin-bottom: 20px;
+        margin-bottom: 10px;
         flex-wrap: wrap;
         gap: 10px;
     }
     .filter-CTA{
       font-size: 15px;
-      margin-left: 30px;
+      margin-left: 35px !important;
+    }
+    .jobList-component{
+        margin-right: 25px;
+        margin-left: 25px;
     }
 }
 
