--- a/Project/src/styles/profilemenu.css
+++ b/Project/src/styles/profilemenu.css
@@ -12,6 +12,7 @@
 }
 
 .profile-dialog {
+    font-family: 'Poppins', sans-serif;
     position: absolute;
     right: 0;
     margin-top: 0.5rem;
@@ -23,6 +24,8 @@
 }
 
 .profile-dialog .menu-item {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 600;
     width: 100%;
     padding: 0.5rem 1rem;
     font-size: 0.875rem;
