job form and small styling issues fixed

--- a/Project/src/styles/button.css
+++ b/Project/src/styles/button.css
@@ -7,7 +7,7 @@
     border: 1px solid #ffd679; 
     font-family: 'Poppins', sans-serif;
     text-align: center;
-    margin-top: 20px;
+    margin-top: 10px;
 }
 .button:hover{
     cursor: pointer;
@@ -17,16 +17,16 @@
     transition-duration: .3s;
 }
 
-/* CHANGE PLS! -> make look better! */
 .deleteButton{
-    background-color: #ff2233;
-    border-radius: 5px;
+    background-color: black;
+    color:  #ffd679; 
+    border-radius: 30px;
     padding: 7px;
 }
 .deleteButton:hover{
-    background-color: white;
-    border-color: #ff2233;
-    color: #ff2233;
+    background-color: #ffd679;
+    border-color: black;
+    color: black;
     cursor: pointer;
     transition-duration: .3s;
 }
