--- a/Project/src/styles/job-details-modal.css
+++ b/Project/src/styles/job-details-modal.css
@@ -41,5 +41,27 @@
     text-align: "left";
     vertical-align: "top";
     padding: "8px";
-    width: 100%;
+    width: 90%;
+    border: 1px solid black;
+    box-shadow: inset 0 0 0 1px #ffd679;
+    border-radius: 10px;
+    font-family: 'Poppins', sans-serif;
+    background-color: white;
+    margin-left: 20px;
+    margin-top: 10px;
+    padding: 5px;
+  
+  }
+
+  .job-labels-form{
+    margin-left: 25px;
+    margin-top: 15px;
+  }
+  .button-container{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    justify-content: flex-start;
+    margin-left: 25px;
+    margin-top: 10px;
   }
