--- a/Project/src/styles/jobsdashboard.css
+++ b/Project/src/styles/jobsdashboard.css
@@ -158,6 +158,7 @@
   .groups {
     flex: 0 0 auto;
     scroll-snap-align: start;
+    text-overflow: ellipsis;
   }
 
 @media (max-width: 768px) {
@@ -177,6 +178,13 @@
         margin-bottom: 10px;
         margin-left: 30px;
         font-size: 20px;
+    }
+    .ungrouped-jobs{
+        margin-top: 10px;
+        margin-bottom: 10px;
+        margin-left: 30px;
+        font-size: 20px;
+        font-size: 17px;
     }
     .createButton {
         background: none;
