--- a/Project/src/styles/static-pages.css
+++ b/Project/src/styles/static-pages.css
@@ -16,7 +16,7 @@ html, body {
   .faq-content {
     max-width: 800px;
     width: 100%;
-    padding: 0 40px;
+    padding: 0 15px;
   }
   
   .faq-item {
@@ -39,9 +39,11 @@ html, body {
     align-items: center;
     justify-content: center;
     min-height: 40vh;
-    padding: 20px 0;
+    padding: 40px 0;
     box-sizing: border-box;
     margin-bottom: 20px;
+    margin-right: 10px;
+    margin-left: 10px;
   }
   
   .contact-content {
