--- a/Project/src/styles/stats-quickview.css
+++ b/Project/src/styles/stats-quickview.css
@@ -91,6 +91,8 @@
     text-overflow: ellipsis;
     overflow: hidden;
     max-width: calc(100% - 50px);
+    margin-top: 10px;
+    margin-left: 10px;
 }
 
 @media (max-width: 768px) {
@@ -98,7 +100,7 @@
         display: flex;
         flex-direction: column;
         align-items: flex-start; 
-        margin-top: 20px !important;
+        margin-top: 30px !important;
         margin-left: 20px !important;
         font-weight: 700;
     }
@@ -136,5 +138,7 @@
     }
     .stat-label {
         font-size: 13px;
+        margin-top: 10px;
+        margin-left: 10px;
     }
 }
