--- a/Project/src/styles/static-pages.css
+++ b/Project/src/styles/static-pages.css
@@ -75,6 +75,7 @@ html, body {
     justify-content: center;
     min-height: 50vh;
     padding: 30px 0;
+    padding-bottom: 100px;
     box-sizing: border-box;
   }
   
