--- a/Project/src/styles/signin.css
+++ b/Project/src/styles/signin.css
@@ -9,7 +9,8 @@
 .nameRow{
     display: flex;
     justify-content: center;
-    margin-bottom: 5px;
+    align-items: flex-start;
+    flex-wrap: nowrap; 
 }
 .registerMessage{
     margin-top: 40px;
@@ -31,34 +32,34 @@
 }
 
 .signInInput-reg{
-    width: 170px; 
+    width: 170px !important;
     height: 40px;
-    padding: 12px; 
+    padding: 12px 12px 20px 12px;
     font-family: 'Poppins', sans-serif;
     box-shadow: 0 0 0 1px black;
     border-color: #ffd679;
     border-radius: 3px !important;
     border-width: 1px;
-    padding-bottom: 20px;
-    padding-top: 20px;
-    margin-left: 50px !important;
-    margin-right: 10px !important;
-    margin-top: 0px !important;
+    margin-top: 5px !important;
+    margin-left: 25px !important;
+    flex: 0 0 170px;
+    margin-bottom: 10px !important;
   }
 
 .signInInputLN-reg{
-    width: 170px; 
-    height: 40px;
-    padding: 12px; 
-    font-family: 'Poppins', sans-serif;
-    box-shadow: 0 0 0 1px black;
-    border-color: #ffd679;
-    border-radius: 3px  !important;
-    border-width: 1px;
-    padding-bottom: 20px;
-    margin-right: 55px !important;
-    margin-top: 0px !important;
-    margin-left: 10px !important;
+  width: 170px !important;
+  height: 40px;
+  padding: 12px 12px 20px 12px;
+  font-family: 'Poppins', sans-serif;
+  box-shadow: 0 0 0 1px black;
+  border-color: #ffd679;
+  border-radius: 3px !important;
+  border-width: 1px;
+  margin: 0;
+  flex: 0 0 170px;
+  margin-top: 5px !important;
+  margin-left: 15px !important;
+  margin-bottom: 10px !important;
 }
 
 .signInPassword{
@@ -85,8 +86,8 @@
     border-color: #ffd679;
     border-radius: 3px;
     border-width: 1px;
-    padding-bottom: 20px;
-    padding-top: 20px;
+    padding-bottom: 10px !important;
+    padding-top: 20px !important;
 }
 
 .signInEmail{
@@ -138,7 +139,7 @@
 .labelCPW{
     font-family: 'Poppins', sans-serif;
     font-weight: 400;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
     margin-right: 23px;
 }
 
@@ -174,7 +175,7 @@
         border-radius: 3px;
         border-width: 1px;
         padding-bottom: 20px;
-        margin-left: 35px !important;
+        margin-left: 40px !important;
         margin-right: 10px !important;
       }
     .center{
